[gd_scene load_steps=10 format=2]

[ext_resource path="res://art/character/codemon/int.png" type="Texture" id=1]
[ext_resource path="res://art/chalenge/analyze_algorithm/not_equal.png" type="Texture" id=2]
[ext_resource path="res://art/component/background_m.png" type="Texture" id=5]
[ext_resource path="res://scene/component/btn_normal.tscn" type="PackedScene" id=6]
[ext_resource path="res://font/freepixel.ttf" type="DynamicFontData" id=8]
[ext_resource path="res://scene/interface/image.gd" type="Script" id=9]
[ext_resource path="res://scene/interface/warnig.gd" type="Script" id=10]
[ext_resource path="res://art/hud/no_battery.png" type="Texture" id=11]

[sub_resource type="DynamicFont" id=1]
size = 21
font_data = ExtResource( 8 )

[node name="warnig" type="Control"]
pause_mode = 2
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 10 )
__meta__ = {
"_edit_use_anchors_": false
}
type = "no_expression"

[node name="box" type="TextureRect" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -211.5
margin_top = -104.5
margin_right = 211.5
margin_bottom = 104.5
texture = ExtResource( 5 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="msg" type="Label" parent="box"]
margin_left = 31.0
margin_top = 83.0
margin_right = 397.0
margin_bottom = 140.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0.843137, 0.0313726, 0.0313726, 1 )
text = "Codecoin insuficiente"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ok" parent="box" instance=ExtResource( 6 )]
margin_left = 125.924
margin_top = 145.0
margin_right = 141.784
margin_bottom = 150.833
stretch_mode = 3

[node name="image" type="TextureRect" parent="box"]
margin_left = 30.0
margin_top = 23.0
margin_right = 215.0
margin_bottom = 55.0
rect_scale = Vector2( 2, 2 )
texture = ExtResource( 11 )
stretch_mode = 6
script = ExtResource( 9 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="hbox" type="HBoxContainer" parent="box"]
margin_left = 31.0
margin_top = 27.0
margin_right = 275.0
margin_bottom = 67.0
rect_scale = Vector2( 1.5, 1.5 )
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="type_1" type="TextureRect" parent="box/hbox"]
margin_left = 70.0
margin_right = 102.0
margin_bottom = 40.0
texture = ExtResource( 1 )

[node name="operator" type="TextureRect" parent="box/hbox"]
margin_left = 106.0
margin_right = 138.0
margin_bottom = 40.0
texture = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="type_2" type="TextureRect" parent="box/hbox"]
margin_left = 142.0
margin_right = 174.0
margin_bottom = 40.0
texture = ExtResource( 1 )
[connection signal="pressed" from="box/ok" to="." method="_on_ok_pressed"]
